[package]
name = "oi_helper"
version = "0.1.0"
edition = "2021"
authors = ["27Onion <zzy20080201@qq.com>"]
license = "GPL-2.0"
readme = "README.md"
repository = "https://github.com/onion108/oi_helper"
description = "A useful tool for C++ competive programming."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
json = "^0.12.0"
crossterm = "^0.24.0"
home = "*"